[tool.poetry]
name = "improcv"
version = "0.1.0"
description = ""
authors = ["Aditya Gudimella <aditya.gudimella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python-headless = "^4.7.0.68"
pillow = "^9.4.0"
torch = "1.13.1"
torchvision = "0.14.1"
pytest = "^7.2.1"
plotly = "^5.13.0"
scikit-image = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
